# DINOvTree

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
configs/: config.yaml
configs/dataset/: bci.yaml  quebec_plantations.yaml  quebec_trees.yaml
configs/experiment/: allometric_h_qt.yaml  dinov3_c_qt.yaml  dinovtree_ch_bci.yaml  dinovtree_ch_qp.yaml  dinovtree_ch_qt.yaml  dinovtreel_ch_qt.yaml  maskrcnn_h_qt.yaml  resnet_c_qt.yaml
configs/model/: allometric.yaml  dinov3.yaml  dinovtree.yaml  maskrcnn.yaml  resnet.yaml
scripts/: evaluate.py  train.py
src/models/allometric_model/: allometric_model.py
src/models/allometric_model/core/: allometric.py
src/models/base_model/: base_model.py
src/models/dinov3_model/: dinov3_model.py
src/models/dinov3_model/core/: dinov3.py
src/models/dinovtree_model/: dinovtree_model.py
src/models/dinovtree_model/core/: dinovtree.py  modules.py  task_heads.py
src/models/maskrcnn_model/: maskrcnn_model.py
src/models/maskrcnn_model/core/: maskrcnn.py
src/models/resnet_model/: resnet_model.py
src/models/resnet_model/core/: resnet.py
src/utils/: augmentor.py  head.py  losses.py  metrics.py  scheduler.py  utils.py
static/css/: index.css
static/js/: copy-bibtex.js  index.js
